--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flask-marshmallow = "^0.14.0"
 marshmallow-sqlalchemy = "^0.28.1"
 scipy = "^1.9.1"
 scikit-learn = "^1.1.2"
+spacy = "^3.4.1"
 
 
 [tool.poetry.dev-dependencies]
